' Generated by UML Generator
' Encoded: hLTHRzis47xtho2G5tcnYgrx6OmjQDoqMu2b3U80sJ3iWHPfcGr52YGLn-lwttTtb6Z9bejbs8j5tf5tnxllFj9lVE0kD9MU-4TbQkvunGhDlRyCmQbL4-HrOSrI_INPjvED4f8LoXLQJYQqYYqiTu9zdZ1sNd7OyJndRwNMEFUmQSwK2QHKHhwrZGb9ijQyzBUQ5rAGZFq47a2k_C-yaX-Vf9kpbRLQSWEgDTTUHlM3DQEQe2hSizQMeuCyHo75bwLGPaoezLeLZGwxELj2mAQSuk9I6kbua3SGfy-cS_PabK031TUm6ZGVccebNL-N5tWWsd7fO2YovzR9ZhxJT5OddoJNn-hEKDHVQdtiVYEBnmTbaknBbtbCSqpyS_ApIoFbqTI93DwHEypxgFezLAOyeUNY4yNOBrdCDCPpUC9Uj9WgwMB0xGHNKxLeFOsm5kV2yMssug7OG8bgfu9Su6J639LWa3nmm5S-E5w4Y5jsfNoj-OuydQsmB13idIm2DwN6Cvm5-HmQXsUuZoCKHjiWkuRGIkdIkLfxfuBz30qKLF659Q1SgL85dms3XTy__Xp5qyYXNfw3UFHxx82OOXh-JmcEnh4hoNP-l9Eas6dpI0ZK7827Axdcq6hzH9CyOlD0YB0R25D9UZAjoaru9yhXTi7Tuv6mjdLJG-kqecFThzRBayebq26S4Nwx-9OTYG3ilt-Dqc3h1NU_I8ofqtpt-WTKLT8qqUYY2S6I4K0AXhZ43wtXwEA6HnSjVRLmI_Ho8ADLxmnVdMZVDlYDtOwIP8GqbZBRUv-nVksceok-og0pDXeMMIfbU50YRB8z6u8evgmdyn1nd_USD080BAGEl8FkdYzXAjg23GWPvOY3KxfRJCwTzBPnnL2BBT6cUI3dGjn0AMCH-mhFdoHbwS18l71wmWqtGijhKpUXBmws13f2p6S8hj_QvEBuzyFheQa544PiwVxrWtS3nW282itHSJ0HHy85K3_KQ66T6EM76TjYjT9iquBxi08Uosg4tM9NPEqUEi5ctmw3Ulf_jr104Q0l-rYeUJCKWB5caFbpV9aSNv5KxiY7DCo22bhkKUjJZyyOzSrrnSiZIa0Odw5B7JAx-WGtoPnzf6yl0C3qhPFh1FNk5T8fze2FcXGZjbVxVYBAGBJHFgWhT58bNrbRly8gf_Ojd0Gu3C2uLS32Ir18ancvZICu6dtxOTfWqKDs82Ca_wSUtzl11YCxXa9l7rU7DK7lNxj6XgHuI9bhYo_8XGeLhzzReevyHRqvHkH-mE6KEphytiVqnTnphemAzvW4t4A3ZbsMG0aVuEpKT9VEyTsFCGaNB-g0by9zf6aWs_5XdkSNyJtUlR_o_E-BT9_4zy90HBVyDtdUtkDfIWL9isurWPVs4q3RwKK4SPf57TOzMNe3AOO_7Vy0
' URL: http://www.plantuml.com/plantuml/uml/hLTHRzis47xtho2G5tcnYgrx6OmjQDoqMu2b3U80sJ3iWHPfcGr52YGLn-lwttTtb6Z9bejbs8j5tf5tnxllFj9lVE0kD9MU-4TbQkvunGhDlRyCmQbL4-HrOSrI_INPjvED4f8LoXLQJYQqYYqiTu9zdZ1sNd7OyJndRwNMEFUmQSwK2QHKHhwrZGb9ijQyzBUQ5rAGZFq47a2k_C-yaX-Vf9kpbRLQSWEgDTTUHlM3DQEQe2hSizQMeuCyHo75bwLGPaoezLeLZGwxELj2mAQSuk9I6kbua3SGfy-cS_PabK031TUm6ZGVccebNL-N5tWWsd7fO2YovzR9ZhxJT5OddoJNn-hEKDHVQdtiVYEBnmTbaknBbtbCSqpyS_ApIoFbqTI93DwHEypxgFezLAOyeUNY4yNOBrdCDCPpUC9Uj9WgwMB0xGHNKxLeFOsm5kV2yMssug7OG8bgfu9Su6J639LWa3nmm5S-E5w4Y5jsfNoj-OuydQsmB13idIm2DwN6Cvm5-HmQXsUuZoCKHjiWkuRGIkdIkLfxfuBz30qKLF659Q1SgL85dms3XTy__Xp5qyYXNfw3UFHxx82OOXh-JmcEnh4hoNP-l9Eas6dpI0ZK7827Axdcq6hzH9CyOlD0YB0R25D9UZAjoaru9yhXTi7Tuv6mjdLJG-kqecFThzRBayebq26S4Nwx-9OTYG3ilt-Dqc3h1NU_I8ofqtpt-WTKLT8qqUYY2S6I4K0AXhZ43wtXwEA6HnSjVRLmI_Ho8ADLxmnVdMZVDlYDtOwIP8GqbZBRUv-nVksceok-og0pDXeMMIfbU50YRB8z6u8evgmdyn1nd_USD080BAGEl8FkdYzXAjg23GWPvOY3KxfRJCwTzBPnnL2BBT6cUI3dGjn0AMCH-mhFdoHbwS18l71wmWqtGijhKpUXBmws13f2p6S8hj_QvEBuzyFheQa544PiwVxrWtS3nW282itHSJ0HHy85K3_KQ66T6EM76TjYjT9iquBxi08Uosg4tM9NPEqUEi5ctmw3Ulf_jr104Q0l-rYeUJCKWB5caFbpV9aSNv5KxiY7DCo22bhkKUjJZyyOzSrrnSiZIa0Odw5B7JAx-WGtoPnzf6yl0C3qhPFh1FNk5T8fze2FcXGZjbVxVYBAGBJHFgWhT58bNrbRly8gf_Ojd0Gu3C2uLS32Ir18ancvZICu6dtxOTfWqKDs82Ca_wSUtzl11YCxXa9l7rU7DK7lNxj6XgHuI9bhYo_8XGeLhzzReevyHRqvHkH-mE6KEphytiVqnTnphemAzvW4t4A3ZbsMG0aVuEpKT9VEyTsFCGaNB-g0by9zf6aWs_5XdkSNyJtUlR_o_E-BT9_4zy90HBVyDtdUtkDfIWL9isurWPVs4q3RwKK4SPf57TOzMNe3AOO_7Vy0
' Generated on: 2026-05-18T18:45:00.606203400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Board {
  +matrix: Cell
  +size: int
  +mineCount: int
  +flagsPlaced: int = 0
  +isGameOver: boolean = false
  +isWon: boolean = false
  +timer: float
  --
  +Board(size: int, difficulty: String)
  -generateMines(): void
  +calculateNumbers(): void
  -countMinesAround(x: int, y: int): int
  +reveal(x: int, y: int): void
  -revealAllMines(): void
  +checkWin(): void
}

class Cell {
  +x: int
  +y: int
  +isMine: boolean = false
  +isRevealed: boolean = false
  +isFlagged: boolean = false
  +adjMines: int = 0
  --
  +Cell(x: int, y: int)
}

class Counter {
  +Counter(x: float, y: float)
  +draw(batch: SpriteBatch, number: int): void
}

abstract class Display {
  #bounds: Rectangle
  #textures: Texture
  #numbers: Integer
  --
  +Display(x: float, y: float)
  +{static} calculateDigits(number: int): int[]
  +calculateNumbers(number: int): void
  +draw(batch: SpriteBatch, number: int): void
}

class Timer {
  +Timer(x: float, y: float)
  +draw(batch: SpriteBatch, number: int): void
}

class Game {
  -batch: SpriteBatch
  -board: Board
  -cellDefault: Texture
  -cellMine: Texture
  -cellFlag: Texture
  -numbers: Texture
  -lightEdge: Texture
  -darkEdge: Texture
  -popupWinTexture: Texture
  -popupLoseTexture: Texture
  -popupSkin: Skin
  -cellSize: int = 32
  -topBarHeight: int = 128
  -menu: TextButton
  -stage: Stage
  -main: Main
  -timer: Display
  -counter: Display
  -timerEnabled: boolean = false
  -popupShown: boolean = false
  --
  +Game(main: Main, board: Board)
  +Game(main: Main, size: int, difficulty: String, timerEnabled: boolean)
  +getWidth(): int
  +getHeight(): int
  +show(): void
  +render(delta: float): void
  -loadTextures(): void
  -loadEdgeTextures(): void
  -loadPopupResources(): void
  -drawDisplays(): void
  -addMenuButton(): void
  -saveGame(): void
  -drawBoard(): void
  -handleInput(): void
  -toggleFlag(cellX: int, cellY: int): void
  -updateTimer(): void
  -checkGameStatus(): void
  -drawEdges(): void
  -drawBeveledBorder(x: float, y: float, width: float, height: float): void
  -setWindowSize(width: int, height: int): void
  +resize(width: int, height: int): void
  +dispose(): void
  +pause(): void
  +resume(): void
  +hide(): void
}

class Popup {
  +Popup(title: String, skin: Skin, popupImageTexture: Texture)
  #result(object: Object): void
  +getPrefWidth(): float
  +getPrefHeight(): float
}

class Main {
  +menu: Menu
  +game: bme.oop.Game
  --
  +create(): void
  -switchScreen(newScreen: Screen): void
  +gotoMenu(): void
  +gotoGame(size: int, difficulty: String, timerEnabled: boolean): void
  +loadGame(name: String): void
}

class Menu {
  -batch: SpriteBatch
  -main: Main
  -stage: Stage
  -font: BitmapFont
  -buttonTexture: Texture
  -skin: Skin
  --
  +Menu(main: Main)
  +show(): void
  +render(delta: float): void
  +initTable(): Table
  -loadSaveNames(): Array<String>
  +resize(width: int, height: int): void
  +pause(): void
  +resume(): void
  +hide(): void
  +dispose(): void
}

Board --> Cell
Counter --|> Display
Timer --|> Display
Game *-- Board
Game *-- Main
Game *-- Display
Main --|> Game
Main --> Menu
Main --> Game
Menu *-- Main
@enduml